syntax = "proto3";

package interaction.api;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package = "elysium.com/applications/interactionservice/api;api";

// InteractionService ...
service InteractionService {

  rpc UpsertInteraction(UpsertInteractionRequest) returns (UpsertInteractionResponse) {
    option (google.api.http) = {
      post: "/api/v1/interactions"
      body: "*"
    };
  }

  rpc GetInteractions(GetInteractionsRequest) returns (GetInteractionResponse) {
    option (google.api.http) = {
      get: "/api/v1/interactions"
    };
  }
}

enum SortOrder {
  ASC = 0;
  DESC = 1;
}

message Interaction {
  uint32 id = 1;
  uint32 post_id = 2;
  string author = 3;
  string type = 4;
  string content = 5;
  uint32 created_at = 6;
  uint32 updated_at = 7;
}

message UpsertInteractionRequest {
  google.protobuf.UInt32Value id = 1;
  uint32 post_id = 2;
  string author = 3;
  string type = 4;
  string content = 5;
}

message UpsertInteractionResponse {
  uint32 code = 1;
  string message = 2;
  uint32 interaction_id = 3;
}

message GetInteractionsRequest {
  uint32 post_id = 1 [(validate.rules).uint32 = {gte: 1}];;
  SortOrder sort_order = 2;
  uint32 page = 3;
  uint32 page_size = 4;
}

message GetInteractionResponse {
  uint32 code = 1;
  string message = 2;
  Data data = 3;

  message Data {
    repeated Interaction interactions = 1;
    uint32 page = 2;
    uint32 page_size = 3;
  }
}